compiler/testData/diagnostics/tests/redeclarations/RedeclarationInDefaultObject.kt
class A {
    companion object B {
        class <!REDECLARATION!>G<!>
        val <!REDECLARATION!>G<!> = 1
    }
}